# ic-fortune-wheel

./: .gitignore  .prettierignore  .windsurfrules  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yaml  codestyle.yaml  tests.yaml
scripts/: deploy-local-canisters.sh
src/backend/: Cargo.toml
src/backend/api/: backend.did
src/backend/api/src/: custom_domain_record.rs  lib.rs  user_profile.rs  wallet.rs  wheel_asset.rs  wheel_prize_extraction.rs
src/backend/external_canisters/: Cargo.toml
src/backend/external_canisters/src/: ledger.rs  lib.rs  xrc.rs
src/backend/impl/: Cargo.toml
src/backend/impl/src/: lib.rs
src/backend/impl/src/controllers/: custom_domain_record_controller.rs  http_controller.rs  init_controller.rs  mod.rs  user_profile_controller.rs  wallet_controller.rs  wheel_asset_controller.rs  wheel_prize_extraction.rs  wheel_prize_extraction_controller.rs
src/backend/impl/src/fixtures/: custom_domain_record.rs  id.rs  mod.rs  user_profile.rs  wheel_asset.rs  wheel_prize_extraction.rs
src/backend/impl/src/mappings/: custom_domain_record.rs  mod.rs  user_profile.rs  wheel_asset.rs  wheel_prize_extraction.rs
src/backend/impl/src/repositories/: custom_domain_record_repository.rs  http_asset_repository.rs  mod.rs  user_profile_repository.rs  wheel_asset_repository.rs  wheel_prize_extraction_repository.rs
src/backend/impl/src/repositories/memories/: custom_domain_record_memory.rs  http_asset_memory.rs  memory_manager.rs  mod.rs  wheel_asset_memory.rs  wheel_prize_extraction_memory.rs
src/backend/impl/src/repositories/types/: custom_domain_record.rs  date_time.rs  http_asset.rs  mod.rs  timestamps.rs  user_profile.rs  uuid.rs  wheel_asset.rs  wheel_prize_extraction.rs
src/backend/impl/src/services/: access_control_service.rs  custom_domain_record_service.rs  http_asset_service.rs  init_service.rs  mod.rs  user_profile_service.rs  wallet_service.rs  wheel_asset_service.rs  wheel_prize_extraction_service.rs
src/backend/impl/src/system_api/: rand.rs  time.rs
src/backend/macros/: Cargo.toml
src/backend/macros/src/: lib.rs
src/common/api/: Cargo.toml  common.did
src/common/external_canisters/: Cargo.toml  build.rs
src/common/external_canisters/src/: ledger.rs  lib.rs  orbit_station.rs  xrc.rs
src/common/external_canisters/src/orbit_station/: spec.rs
src/common/macros/: Cargo.toml
src/common/macros/src/: lib.rs
src/common/system_api/: Cargo.toml
src/common/system_api/src/: rand.rs  time.rs
src/common/types/: Cargo.toml
src/common/types/src/: date_time.rs  lib.rs  timestamps.rs  uuid.rs
src/common/types/src/fixtures/: date_time.rs  id.rs
src/frontend/: components.json  eslint.config.js  eslint.config.mjs  index.html  next.config.ts  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vite.env.d.ts
src/frontend-old/: README.md  next.config.ts
src/frontend-old/public/.well-known/: ic-domains
src/frontend-old/src/components/: dashboard-header.tsx  file-input.tsx  input-number-controls.tsx  user-role-badge.tsx  wheel-prize-extraction-state-badge.tsx  wheel-prize-name-with-icon.tsx
src/frontend-old/src/contexts/: auth-context.tsx
src/frontend-old/src/hooks/: use-create-wheel-asset.ts  use-delete-user.ts  use-delete-wheel-asset.ts  use-query.d.ts  use-update-user.ts  use-user.ts  use-wheel-assets.ts  use-wheel-data.ts
src/frontend-old/src/lib/: forms.ts  ledger.ts  routes.ts  wheel-asset.ts  wheel-prize-extraction.ts
src/frontend/public/: .ic-assets.json5
src/frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  router.ts  styles.css
src/frontend/src/app/: ClientLayout.tsx  globals.css  layout.tsx  page.ts  page.tsx
src/frontend/src/components/: activity-table.tsx  asset-type-badge.tsx  auth-form.tsx  copy-to-clipboard-button.tsx  copy-to-clipboard-pre.tsx  custom-domain-record-row.tsx  dashboard-header.tsx  delete-custom-domain-record-modal.tsx  edit-user-dialog.tsx  file-input.tsx  icons.tsx  layouts.tsx  loading-page.tsx  logo.tsx  new-custom-domain-form.tsx  principal-display.tsx  sortable-wheel-prizes-list.tsx  user-id-display.tsx  user-profile.tsx  wheel-prize-extraction-state-badge.tsx  wheel-prize-name-with-icon.tsx
src/frontend/src/constants/: api.ts  images.ts  token.ts  user.ts
src/frontend/src/contexts/: activity-context.tsx  auth-context.tsx  team-members-context.tsx  user-context.tsx  wheel-assets-context.tsx  wheel-prizes-context.tsx
src/frontend/src/hooks/: use-activity.ts  use-auth.ts  use-bn-registration.ts  use-create-bn-registration.ts  use-create-custom-domain-record.ts  use-create-default-assets.ts  use-create-wheel-asset.ts  use-create-wheel-prize-extraction.ts  use-custom-domain-records.ts  use-delete-bn-registration.ts  use-delete-custom-domain-record.ts  use-delete-user.ts  use-delete-wheel-asset.ts  use-forwarded-ref.ts  use-ledger-canister-metadata.ts  use-poll-and-update-custom-domain-record.ts  use-poll-extraction.ts  use-query.d.ts  use-refresh-token-assets.ts  use-team-members.ts  use-transfer-token.ts  use-update-custom-domain-record.ts  use-update-my-user.ts  use-update-user.ts  use-update-wheel-asset.ts  use-update-wheel-prize.ts  use-upsert-wheel-asset-images.ts  use-user.ts  use-wheel-asset-tokens-usd-value-sum.ts  use-wheel-asset-tokens-use-value-sum.ts  use-wheel-asset-tokens.ts  use-wheel-asset.ts  use-wheel-assets.ts  use-wheel-data.ts  use-wheel-prize-extractions-stats.ts  use-wheel-prize-order.ts  use-wheel-prizes-with-probability.ts  use-wheel-prizes.ts
src/frontend/src/icons/: asset-type.ts
src/frontend/src/lib/: api.ts  bn-registration.ts  custom-domain-record.ts  forms.ts  (+7 more)
src/ic-fortune-wheel-backend/: Cargo.toml
src/ic-fortune-wheel-frontend/: package.json
src/ic-fortune-wheel-frontend/src/: App.jsx
src/my-app/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
src/my-app/src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src/orchestrator/api/: Cargo.toml
src/orchestrator/impl/: Cargo.toml
(+142 files in other folders)
