[workspace]
members = [
  "src/backend/impl",
  "src/backend/api",
  "src/common/api",
  "src/common/macros",
  "src/common/external_canisters",
  "src/orchestrator/impl",
  "src/orchestrator/api",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
candid_parser = "0.1"
ic-cdk = "0.17"

serde = "1.0"

external_canisters = { path = "./src/common/external_canisters" }
common_macros = { path = "./src/common/macros" }
common_api = { path = "./src/common/api" }
