[package]
name = "backend_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
backend_api = { path = "../api" }
common_api.workspace = true
common_macros.workspace = true
external_canisters.workspace = true

candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
ic-asset-certification = "3.0"
ic-http-certification = "3.0"

serde.workspace = true

rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
fastrand = "2.3"

chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = "1.11"
regex = "1.11"
lazy_static = "1.5"
include_dir = "0.7"

[dev-dependencies]
candid_parser.workspace = true
mockall = "0.13"
rstest = "0.23"
async-std = { version = "1.13", features = ["attributes"] }
