[package]
name = "backend_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
backend_api = { path = "../api" }
common_api.workspace = true
common_macros.workspace = true
common_types.workspace = true
external_canisters.workspace = true
system_api.workspace = true

candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers = "0.11"
ic-stable-structures.workspace = true
ic-asset-certification = "3.0"
ic-http-certification = "3.0"

serde.workspace = true

rand.workspace = true
rand_chacha.workspace = true

chrono.workspace = true
uuid.workspace = true
regex = "1.11"
lazy_static = "1.5"
include_dir = "0.7"

[dev-dependencies]
candid_parser.workspace = true
mockall.workspace = true
rstest.workspace = true
async-std.workspace = true
