[package]
name = "orchestrator_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
orchestrator_api = { path = "../api" }
external_canisters.workspace = true

candid.workspace = true
ic-cdk.workspace = true

[dev-dependencies]
candid_parser.workspace = true
mockall = "0.13"
rstest = "0.23"
async-std = { version = "1.13", features = ["attributes"] }
